# CondaDependencyCleaner

./: CONTRIBUTING.md  README.md  code_check.sh  code_check_req.txt  pyproject.toml
.github/workflows/: main.yml
conda_dependency_cleaner/: _clean_environment_from_file.py  cdc.py  clean.py
conda_dependency_cleaner/utility/: __init__.py  _dependency.py  _to_yaml_patch.py
tests/: requirements.txt  test_clean.py  test_env.yml
tests/files/: clean_test_env.yml  clean_test_env_no_builds.yml  clean_test_env_no_versions.yml
